<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.bonitasoft.studio</groupId>
	<artifactId>studio</artifactId>
	<version>7.13.0.W12</version>
	<packaging>pom</packaging>
	<name>Bonita Studio</name>
	<properties>
		<tychoVersion>2.2.0</tychoVersion>
		<java.version>11</java.version>
		<os-jvm-flags></os-jvm-flags>
		<branding.version>2021.2-SNAPSHOT</branding.version>
		<bundle.version>${project.version}</bundle.version>
		<ui.designer.version>1.13.5</ui.designer.version>
		<business.data.repository.version>${project.version}</business.data.repository.version>
		<engine.version>${project.version}</engine.version>
		<filters.version>${project.version}</filters.version>
		<platform.version>${project.parent.version}</platform.version>
		<tomcat.version>8.5.40</tomcat.version>
		<image-overlay-plugin.version>1.1.2</image-overlay-plugin.version>
		<bonita-project-report-model.version>0.0.1-SNAPSHOT</bonita-project-report-model.version>
		<p2MirrorUrl>http://update-site.bonitasoft.com/p2/4.10</p2MirrorUrl>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.exclusions>
			**/org/w3/**/*,
			**/src-gen/**/*,
			**/xtend-gen/**/*,
			**/org/bonitasoft/studio/actors/model/**/*,
			**/org/bonitasoft/studio/connector/model/implementation/provider/**/*,
			**/org/bonitasoft/studio/connector/model/definition/provider/**/*
		</sonar.exclusions>
		<sonar.login>51b70ff55d32a0c24e649805b14314ea7930c2de</sonar.login>
		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
		<tycho.localArtifacts>ignore</tycho.localArtifacts>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<groovy-maven-plugin.groovy.version>3.0.7</groovy-maven-plugin.groovy.version>
		<maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
	</properties>
	<modules>
		<module>patched-plugins</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>4.2.1</version>
				</plugin>
				<plugin>
					<groupId>io.fabric8</groupId>
					<artifactId>docker-maven-plugin</artifactId>
					<version>0.24.0</version>
				</plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.4.0.905</version>
				</plugin>
				<plugin>
					<groupId>org.bonitasoft.maven</groupId>
					<artifactId>image-overlay-plugin</artifactId>
					<version>${image-overlay-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-versions-plugin</artifactId>
					<version>${tychoVersion}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-eclipserun-plugin</artifactId>
					<version>${tychoVersion}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tychoVersion}</version>
					<configuration>
						<strictBinIncludes>false</strictBinIncludes>
						<strictVersions>false</strictVersions>
						<archive>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven-dependency-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.8</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tychoVersion}</version>
					<configuration>
						<useUIHarness>false</useUIHarness>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tychoVersion}</version>
					<configuration>
						<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
						<useProjectSettings>false</useProjectSettings>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tychoVersion}</version>
					<configuration>
						<executionEnvironment>JavaSE-11</executionEnvironment>
						<environments>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>macosx</os>
								<ws>cocoa</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86_64</arch>
							</environment>
						</environments>
						<target>
							<artifact>
								<groupId>org.bonitasoft.studio</groupId>
								<artifactId>platform</artifactId>
								<version>${platform.version}</version>
							</artifact>
						</target>
						<filters>
							<filter>
								<type>eclipse-plugin</type>
								<id>org.bonitasoft.studioEx.console.libs</id>
								<removeAll />
							</filter>
						</filters>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.gmaven</groupId>
					<artifactId>groovy-maven-plugin</artifactId>
					<version>2.1.1</version>
					<dependencies>
						<dependency>
							<groupId>org.codehaus.groovy</groupId>
							<artifactId>groovy</artifactId>
							<version>${groovy-maven-plugin.groovy.version}</version>
						</dependency>
						<dependency>
							<groupId>org.codehaus.groovy</groupId>
							<artifactId>groovy-xml</artifactId>
							<version>${groovy-maven-plugin.groovy.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.gmaven</groupId>
				<artifactId>groovy-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>execute</goal>
						</goals>
						<configuration>
							<source>
								project.properties["branding.version.short"] =
								"${branding.version}".replaceAll('-.*', '')
							</source>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
			</plugin>
			<!-- enable tycho build extension -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tychoVersion}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.bonitasoft.engine.data</groupId>
				<artifactId>bonita-business-data-generator</artifactId>
				<version>${engine.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bonitasoft.maven</groupId>
				<artifactId>bonita-project-report-model</artifactId>
				<version>${bonita-project-report-model.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.1</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>jdk11-tests</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-toolchains-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<phase>validate</phase>
								<goals>
									<goal>toolchain</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<toolchains>
								<jdk>
									<version>11</version>
									<vendor>OpenJDK</vendor>
								</jdk>
							</toolchains>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>platform</module>
				<module>tests-dependencies</module>
				<module>bundles</module>
			</modules>
		</profile>
		<profile>
			<id>all-in-one</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>all-in-one</module>
			</modules>
		</profile>
		<profile>
			<id>it</id>
			<modules>
				<module>tests</module>
			</modules>
		</profile>
		<profile>
			<id>macosx-jvm-flags</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
			</properties>
		</profile>
	</profiles>


</project>
